--- a/_includes/services.html
+++ b/_includes/services.html
@@ -29,7 +29,7 @@
                 <strong>Service Name</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
+              <a href="#" class="btn btn-light">button</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
@@ -39,7 +39,7 @@
               <i class="fa fa-flask fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Great job</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <a href="#" class="btn btn-light">Learn More</a>
@@ -52,7 +52,7 @@
               <i class="fa fa-shield fa-stack-1x text-primary"></i>
             </span>
               <h4>
-                <strong>Service Name</strong>
+                <strong>Serdffdvice Name</strong>
               </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               <a href="#" class="btn btn-light">Learn More</a>
