--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1>Start Bootstrap</h1>
-    <h3>Free Bootstrap Themes &amp; Templates</h3>
-    <br>
+    <h1>Olivier Magny</h1>
+    <h3>Let's get this thing going</h3>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
 </header>
